--- a/maria_pipeline/test_run.ipynb
+++ b/maria_pipeline/test_run.ipynb
@@ -2,7 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image 0: dtype=uint8, min=54, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_0.png\n",
+      "Image 1: dtype=uint8, min=58, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_99.png\n",
+      "Image 2: dtype=uint8, min=14, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_199.png\n",
+      "Image 3: dtype=uint8, min=32, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_299.png\n",
+      "Image 4: dtype=uint8, min=62, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_399.png\n",
+      "Image 5: dtype=uint8, min=76, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_499.png\n",
+      "Image 6: dtype=uint8, min=69, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_599.png\n",
+      "Image 7: dtype=uint8, min=67, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_699.png\n",
+      "Image 8: dtype=uint8, min=63, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_799.png\n",
+      "Image 9: dtype=uint8, min=79, max=255\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_899.png\n",
+      "All images saved to /home/maria/attention-exploration/VIT/repeat\n"
+     ]
+    }
+   ],
+   "source": [
+    "from allensdk.core.brain_observatory_cache import BrainObservatoryCache\n",
+    "from pathlib import Path   \n",
+    "import matplotlib.pyplot as plt \n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# 10 images should be picked at max distance from each other\n",
+    "allen_cache_path = '/home/maria/Documents/AllenBrainObservatory'\n",
+    "session_A = 501704220\n",
+    "save_path = '/home/maria/attention-exploration/VIT/repeat'\n",
+    "\n",
+    "# Ensure the save path exists\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "boc = BrainObservatoryCache(manifest_file=str(\n",
+    "        Path(allen_cache_path) / Path('brain_observatory_manifest.json')))\n",
+    "\n",
+    "def get_images_from_allen_and_save():\n",
+    "    # Load the dataset\n",
+    "    movie_one_dataset = boc.get_ophys_experiment_data(session_A)\n",
+    "    movie_one = movie_one_dataset.get_stimulus_template('natural_movie_one')\n",
+    "\n",
+    "    # Select 10 images at maximum distance from each other\n",
+    "    num_images = 10\n",
+    "    total_images = movie_one.shape[0]\n",
+    "    indices = np.linspace(0, total_images - 1, num_images, dtype=int)\n",
+    "    selected_images = movie_one[indices]\n",
+    "\n",
+    "    for i, idx in enumerate(indices):\n",
+    "        image = selected_images[i]\n",
+    "        print(f'Image {i}: dtype={image.dtype}, min={image.min()}, max={image.max()}')\n",
+    "\n",
+    "        # Normalize image data to [0, 255]\n",
+    "        image = (image - image.min()) / (image.max() - image.min())  # Normalize to [0, 1]\n",
+    "        image = (image * 255).astype(np.uint8)  # Scale to [0, 255]\n",
+    "\n",
+    "        # Convert grayscale image to RGB by stacking\n",
+    "        image_rgb = np.stack([image]*3, axis=-1)\n",
+    "\n",
+    "        # Convert to PIL Image\n",
+    "        image_pil = Image.fromarray(image_rgb)\n",
+    "\n",
+    "        # Save the image\n",
+    "        image_path = os.path.join(save_path, f'image_{idx}.png')\n",
+    "        image_pil.save(image_path)\n",
+    "        print(f'Saved: {image_path}')\n",
+    "\n",
+    "        # Optional: Display the images to verify\n",
+    "        # plt.figure()\n",
+    "        # plt.imshow(image_pil)\n",
+    "        # plt.title(f\"Saved Image {i}\")\n",
+    "        # plt.show()\n",
+    "\n",
+    "    print(f\"All images saved to {save_path}\")\n",
+    "\n",
+    "get_images_from_allen_and_save()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_0.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_99.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_199.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_299.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_399.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_499.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_599.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_699.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_799.png\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_899.png\n",
+      "All images saved to /home/maria/attention-exploration/VIT/repeat\n"
+     ]
+    }
+   ],
+   "source": [
+    "from allensdk.core.brain_observatory_cache import BrainObservatoryCache\n",
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "# 10 images should be picked at max distance from each other\n",
+    "allen_cache_path = '/home/maria/Documents/AllenBrainObservatory'\n",
+    "session_A = 501704220\n",
+    "save_path = '/home/maria/attention-exploration/VIT/repeat'\n",
+    "\n",
+    "# Ensure the save path exists\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "boc = BrainObservatoryCache(manifest_file=str(\n",
+    "        Path(allen_cache_path) / Path('brain_observatory_manifest.json')))\n",
+    "\n",
+    "def get_images_from_allen_and_save():\n",
+    "    # Load the dataset\n",
+    "    movie_one_dataset = boc.get_ophys_experiment_data(session_A)\n",
+    "    movie_one = movie_one_dataset.get_stimulus_template('natural_movie_one')\n",
+    "\n",
+    "    # Select 10 images at maximum distance from each other\n",
+    "    num_images = 10\n",
+    "    total_images = movie_one.shape[0]\n",
+    "    indices = np.linspace(0, total_images - 1, num_images, dtype=int)\n",
+    "    selected_images = movie_one[indices]\n",
+    "\n",
+    "    # Save each selected image as a PNG file in RGB format\n",
+    "    for i, idx in enumerate(indices):\n",
+    "        image = selected_images[i]\n",
+    "        \n",
+    "        # Convert grayscale to RGB using PIL\n",
+    "        image_rgb = Image.fromarray((image * 255).astype(np.uint8)).convert(\"RGB\")\n",
+    "        \n",
+    "        # Save the image\n",
+    "        image_path = os.path.join(save_path, f'image_{idx}.png')\n",
+    "        image_rgb.save(image_path)\n",
+    "        print(f'Saved: {image_path}')\n",
+    "\n",
+    "    print(f\"All images saved to {save_path}\")\n",
+    "\n",
+    "get_images_from_allen_and_save()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +215,120 @@
     "    plt.show()\n",
     "\n",
     "get_images_from_allen()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "def get_images_from_allen_and_save():\n",
+    "    # Load the dataset\n",
+    "    movie_one_dataset = boc.get_ophys_experiment_data(session_A)\n",
+    "    movie_one = movie_one_dataset.get_stimulus_template('natural_movie_one')\n",
+    "\n",
+    "    # Select 10 images at maximum distance from each other\n",
+    "    num_images = 10\n",
+    "    total_images = movie_one.shape[0]\n",
+    "    indices = np.linspace(0, total_images - 1, num_images, dtype=int)\n",
+    "    selected_images = movie_one[indices]\n",
+    "\n",
+    "    # Save each selected image as a PNG file in RGB format\n",
+    "    for i, idx in enumerate(indices):\n",
+    "        image = selected_images[i]\n",
+    "\n",
+    "        # Check the data type and range\n",
+    "        print(f'Image {i} - dtype: {image.dtype}, min: {image.min()}, max: {image.max()}')\n",
+    "\n",
+    "        # Normalize the image if necessary\n",
+    "        if image.dtype != np.uint8 or image.max() > 255:\n",
+    "            # Normalize to [0, 255] and convert to uint8\n",
+    "            image = ((image - image.min()) / (image.max() - image.min()) * 255).astype(np.uint8)\n",
+    "\n",
+    "        # Convert grayscale to RGB\n",
+    "        image_rgb = Image.fromarray(image).convert(\"RGB\")\n",
+    "\n",
+    "        # Save the image\n",
+    "        image_path = os.path.join(save_path, f'image_{idx}.png')\n",
+    "        image_rgb.save(image_path)\n",
+    "        print(f'Saved: {image_path}')\n",
+    "\n",
+    "    print(f\"All images saved to {save_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_0.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_1.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_2.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_3.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_4.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_5.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_6.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_7.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_8.npy\n",
+      "Saved: /home/maria/attention-exploration/VIT/repeat/image_9.npy\n",
+      "All images saved to /home/maria/attention-exploration/VIT/repeat\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "from allensdk.core.brain_observatory_cache import BrainObservatoryCache\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# 10 images should be picked at max distance from each other\n",
+    "allen_cache_path = '/home/maria/Documents/AllenBrainObservatory'\n",
+    "session_A = 501704220\n",
+    "save_path = '/home/maria/attention-exploration/VIT/repeat'\n",
+    "\n",
+    "# Ensure the save path exists\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "boc = BrainObservatoryCache(manifest_file=str(\n",
+    "        Path(allen_cache_path) / Path('brain_observatory_manifest.json')))\n",
+    "\n",
+    "def get_images_from_allen_and_save():\n",
+    "    # Load the dataset\n",
+    "    movie_one_dataset = boc.get_ophys_experiment_data(session_A)\n",
+    "    movie_one = movie_one_dataset.get_stimulus_template('natural_movie_one')\n",
+    "\n",
+    "    # Select 10 images at maximum distance from each other\n",
+    "    num_images = 10\n",
+    "    total_images = movie_one.shape[0]\n",
+    "    indices = np.linspace(0, total_images - 1, num_images, dtype=int)\n",
+    "    selected_images = movie_one[indices]\n",
+    "\n",
+    "    # Save each selected image as a NumPy array\n",
+    "    for i, idx in enumerate(indices):\n",
+    "        image = selected_images[i]\n",
+    "        image_path = os.path.join(save_path, f'image_{i}.npy')\n",
+    "        np.save(image_path, image)\n",
+    "        print(f'Saved: {image_path}')\n",
+    "\n",
+    "    print(f\"All images saved to {save_path}\")\n",
+    "\n",
+    "get_images_from_allen_and_save()\n"
    ]
   }
  ],
